Add README to excluded files.

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ pygments:    false
 markdown:    maruku
 permalink:   date
 
+exclude: [README.md]
+
 maruku:
   use_tex:    false
   use_divs:   false
