--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 safe:        true
-auto:        true
-server:      true
-server_port: 4000
+port:        4000
 baseurl:    /
 url: http://localhost:4000
 
