--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ plugins:     ./_plugins
 
 future:      true
 lsi:         false
-pygments:    false
+pygments:    true
 markdown:    rdiscount
 permalink:   date
 
