--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,8 @@ email:
 author: Michael Comella
 
 description: > # this means to ignore newlines until "baseurl:"
-  Chaplin is a minimalistic, mobile friendly theme for Jekyll.
-  The Documentation for it is available on this website itself. 
-  You can check out the source on <a href="http://github.com/bk2dcradle/Chaplin" class="deactivate-link"><span> GitHub </span></a>
+  Michael Comella is a developer working on Firefox for Android
+  at Mozilla. He enjoys learning, cycling, and self discovery.
 
 url: "http://bk2dcradle.gitub.io" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog
