Replace profile picture with gravatar.

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ heading_font: Lobster
 about_footer: true
 short_bio: >
     A day without laughter is a day wasted.
-profile_picture: http://img3.rnkr-static.com/list_img/11570/111570/C300/movies-and-films-directed-by-charlie-chaplin-u4.jpg
+profile_picture: https://www.gravatar.com/avatar/36d05d5b8389b342fc0629461fb39377?s=150
 
 google_analytics: false
 tracking_id: # Your google analytics tracking id
