--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ comments: true
 heading_font: Lobster 
 about_footer: true
 short_bio: >
-    A day without laughter is a day wasted.
+    Firefox for Android developer.
 profile_picture: https://www.gravatar.com/avatar/36d05d5b8389b342fc0629461fb39377?s=150
 
 google_analytics: false
