--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Michael Comella is a developer working on Firefox for Android
   at Mozilla. He enjoys learning, cycling, and self discovery.
 
-url: "http://mcomella.gitub.com" # the base hostname & protocol for your site
+url: "http://mcomella.xyz" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: michaelcomella
 github_username:  mcomella
