--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ email:
 author: Michael Comella
 
 description: > # this means to ignore newlines until "baseurl:"
-  Michael Comella is a developer working on Firefox for Android
-  at Mozilla. He enjoys learning, cycling, and self discovery.
+  Stream of consciousness of a developer trying to find their way.<br>
+  Currently: Android at Mozilla. Experience is knowledge. Movement is life.
 
 url: "http://mcomella.xyz" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -22,7 +22,7 @@ comments: true
 heading_font: Lobster 
 about_footer: true
 short_bio: >
-    Firefox for Android developer.
+    Firefox for Android front-end developer. Cyclist. Self discoverer.
 profile_picture: https://www.gravatar.com/avatar/36d05d5b8389b342fc0629461fb39377?s=150
 
 google_analytics: false
