Move title to full name; Add nickname title to id.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # User Settings | Edit these according to your site
 
-title: mcomella
+title: Michael Comella
+nickname_title: mcomella
 email: 
 author: Michael Comella
 
