--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ comments: true
 heading_font: Lobster 
 about_footer: true
 short_bio: >
-    Mobile developer at Mozilla. Currently: Firefox Focus.
+    Mobile developer at Mozilla currently working on Firefox for Fire TV.
 profile_picture: https://www.gravatar.com/avatar/36d05d5b8389b342fc0629461fb39377?s=150
 
 google_analytics: false
