--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ permalink:          /blog/:year/:title.html
 comments: true
 
 short_bio: >
-    Mobile developer at Mozilla currently working on Firefox for Fire TV.
+    developer at Mozilla currently working on Firefox performance.
 profile_picture: https://www.gravatar.com/avatar/36d05d5b8389b342fc0629461fb39377?s=150
 
 google_analytics: false
