--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ permalink:          /blog/:year/:title.html
 comments: true
 
 short_bio: >
-    developer at Mozilla currently working on Firefox performance.
+    software developer with Android and performance experience.
 
 google_analytics: false
 tracking_id: # Your google analytics tracking id
