use platform fonts for content; update styles.

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ permalink:          /blog/:year/:title.html
 comments: true
 
 short_bio: >
-    software developer with Android and performance experience.
+    software developer with Android and performance optimization expertise.
 
 google_analytics: false
 tracking_id: # Your google analytics tracking id
